Fix header overflow caused by 100% width and container not set its width and add headerButton

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
